
Changelog for 8.3.0

Collector:

DB:
  - Target records
  - More granularity on user permissions
  - Factories can be created at the operation level and will create a new target on each new instance
  - Support for 3rd party translation service for keylog, chat, messages
  - Modification of the target (upload or exec) limited by license
  - HASP drivers updated to 6.51 (support for 2012)
  - fix for size of evidence of an instance reported incorrectly